<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save_film"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="10"
        android:title="@string/action_save_film"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update_film_information"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="20"
        android:title="@string/action_update_film_information"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="60"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

</menu>